--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -125,7 +125,7 @@
 						</a>
 						<div class="media-body">
 							<h6 class="mt-0 mb-3">
-								<a href="site/discuss-detail.html" th:utext="${map.post.title}"></a>
+								<a th:href="@{|/discuss/detail/${map.post.id}|}" th:utext="${map.post.title}"></a>
 								<span class="badge badge-secondary bg-primary" th:if="${map.post.type == 1}">置顶</span>
 								<span class="badge badge-secondary bg-danger" th:if="${map.post.status == 1}">精华</span>
 							</h6>
