--- a/src/main/resources/templates/site/letter.html
+++ b/src/main/resources/templates/site/letter.html
@@ -66,7 +66,7 @@
 					<!-- 选项 -->
 					<ul class="nav nav-tabs mb-3">
 						<li class="nav-item">
-							<a class="nav-link position-relative active" th:href="@{/letter/list}">朋友私信<span class="badge badge-danger" th:text="${totalUnreadCount}">3</span></a>
+							<a class="nav-link position-relative active" th:href="@{/letter/list}">朋友私信<span class="badge badge-danger" th:text="${totalUnreadCount}" th:if="${totalUnreadCount != 0}">3</span></a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link position-relative" href="notice.html">系统通知<span class="badge badge-danger">27</span></a>
