add follow logic

--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -40,9 +40,9 @@
 									<img src="http://images.nowcoder.com/head/1t.png" class="rounded-circle" style="width:30px;"/>
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item text-center" href="../site/profile.html">个人主页</a>
-									<a class="dropdown-item text-center" href="../site/setting.html">账号设置</a>
-									<a class="dropdown-item text-center" href="../site/login.html">退出登录</a>
+									<a class="dropdown-item text-center" th:href="@{/profile}">个人主页</a>
+									<a class="dropdown-item text-center" th:href="@{/setting}">账号设置</a>
+									<a class="dropdown-item text-center" th:href="@{/login}">退出登录</a>
 									<div class="dropdown-divider"></div>
 									<span class="dropdown-item text-center text-secondary">nowcoder</span>
 								</div>
