--- a/src/main/resources/templates/site/profile.html
+++ b/src/main/resources/templates/site/profile.html
@@ -90,8 +90,8 @@
 							<span>注册于 <i class="text-muted" th:text="${#dates.format(userInfo.createTime, 'yyyy-MM-dd HH:mm:ss')}">2015-06-12 15:20:12</i></span>
 						</div>
 						<div class="text-muted mt-3 mb-5">
-							<span>关注了 <a class="text-primary" th:href="@{/follow}" th:text="${followeeCount}">5</a> 人</span>
-							<span class="ml-4">关注者 <a class="text-primary" th:href="@{/follow}" th:text="${followerCount}">123</a> 人</span>
+							<span>关注了 <a class="text-primary" th:href="@{|/followee/${userInfo.id}|}" th:text="${followeeCount}">5</a> 人</span>
+							<span class="ml-4">关注者 <a class="text-primary" th:href="@{|/follower/${userInfo.id}|}" th:text="${followerCount}">123</a> 人</span>
 							<span class="ml-4">获得了 <i class="text-danger" th:text="${likeCount}">87</i> 个赞</span>
 						</div>
 					</div>
