--- a/src/main/resources/templates/site/discuss-detail.html
+++ b/src/main/resources/templates/site/discuss-detail.html
@@ -84,7 +84,7 @@
 						<div class="text-muted mt-3" >
 							发布于 <b th:text="${#dates.format(post.createTime, 'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</b>
 							<ul class="d-inline float-right">
-								<li class="d-inline ml-2"><a href="javascript:;" th:onclick="|like(this, 1, ${post.id}, ${post.userId});|" class="text-primary">
+								<li class="d-inline ml-2"><a href="javascript:;" th:onclick="|like(this, 1, ${post.id}, ${post.userId}, ${post.id});|" class="text-primary">
 									<b th:text="${postLikeStatus==1 ?'已赞':'赞'}">赞</b>(<i th:text="${postLikeCount}">1</i>)
 								</a>
 								</li>
@@ -137,7 +137,7 @@
 								<span>发布于 <b th:text="${#dates.format(commentVo.comment.createTime, 'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</b></span>
 								<ul class="d-inline float-right">
 									<li class="d-inline ml-2">
-										<a href="javascript:;" class="text-primary" th:onclick="|like(this, 2, ${commentVo.comment.id}, ${commentVo.comment.userId});|">
+										<a href="javascript:;" class="text-primary" th:onclick="|like(this, 2, ${commentVo.comment.id}, ${commentVo.comment.userId}, ${post.id});|">
 											<b th:text="${commentVo.commentLikeStatus==1 ?'已赞':'赞'}">赞</b>(<i th:text="${commentVo.commentLikeCount}">1</i>)
 										</a></li>
 									<li class="d-inline ml-2">|</li>
@@ -163,7 +163,7 @@
 									<div class="mt-3">
 										<span th:text="${#dates.format(replayVo.replay.createTime, 'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</span>
 										<ul class="d-inline float-right">
-											<li class="d-inline ml-2"><a href="javascript:;" th:onclick="|like(this, 2, ${replayVo.replay.id}, ${replayVo.replay.userId})|" class="text-primary">
+											<li class="d-inline ml-2"><a href="javascript:;" th:onclick="|like(this, 2, ${replayVo.replay.id}, ${replayVo.replay.userId}, ${post.id})|" class="text-primary">
 												<b th:text="${replayVo.replayLikeStatus==1 ?'已赞':'赞'}">赞</b>(<i th:text="${replayVo.replayLikeCount}">1</i>)
 											</a></li>
 											<li class="d-inline ml-2">|</li>
